# llp_database

./: CMakeLists.txt  README.md  performance_test_runner.py
include/: data_operations.h  db.h  file.h  operations.h  schema.h  table.h  table_definition_operations.h  table_manipulation_operations.h  table_operations.h  table_schema.h
src/db/: allocator.c  allocator.h  comparator.c  comparator.h  data_operations.c  db.c  db.h  element.h  element_allocator.c  element_allocator.h  elements.h  file.c  file.h  file_private.h  init_db.c  operations.c  page.c  page.h  rb_tree.c  rb_tree.h  schema.c  schema.h  table.c  table_data.h  table_definition_operations.c  table_manipulation_operations.c  table_metadata.c  table_metadata.h  table_operations.c  table_operations.cpp  table_operations.h
src/db/file/: file_internal.c  file_internal.h  file_meta.h
src/db/hash_table/: hash_table.c  hash_table.h
src/db/operations/: table_operations.c
src/db/page/: page.cpp  page.h
src/db/table/: table_meta.h
src/utils/: logging.c  logging.h
test/: delete_insert_test.c  element_allocator_test.c  join_test.c  performance_test.c  table_operations_test.c  test.c
